// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane P1 — the phone is unchanged (golden) plans list, iOS 390 1`] = `
{
  "lines": 622,
  "sha256": "7e933a6370e6a56c063b09225797613feb0fe0591ffef77ee740c46fa494f792",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans list, web 390 1`] = `
{
  "lines": 622,
  "sha256": "7e933a6370e6a56c063b09225797613feb0fe0591ffef77ee740c46fa494f792",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans project picker, iOS 390 1`] = `
{
  "lines": 335,
  "sha256": "16f54dbaed50cc97cdfc50725728f377cc2bce2010f99333df9ebb5c48a33b4f",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans project picker, web 390 1`] = `
{
  "lines": 335,
  "sha256": "16f54dbaed50cc97cdfc50725728f377cc2bce2010f99333df9ebb5c48a33b4f",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans with superseded shown, iOS 390 1`] = `
{
  "lines": 664,
  "sha256": "4d5fafcb0e6bc69a954891e5164e68d0981cebbfeb4597fd1f647c10f45e32de",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans with the Ask sheet open, iOS 390 1`] = `
{
  "lines": 622,
  "sha256": "60130ec84d9b94e8d15f2797145fd7c6f39d2d3e066ae0fe12d988d45e235e9b",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans with the Ask sheet open, web 390 1`] = `
{
  "lines": 622,
  "sha256": "60130ec84d9b94e8d15f2797145fd7c6f39d2d3e066ae0fe12d988d45e235e9b",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 1 (superseded banner), iOS 390 1`] = `
{
  "lines": 470,
  "sha256": "95bce06992b79f20bb7d4dd7e3f33f53143705f24a722ec00597d3bb55e3595b",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 1 (superseded banner), web 390 1`] = `
{
  "lines": 470,
  "sha256": "95bce06992b79f20bb7d4dd7e3f33f53143705f24a722ec00597d3bb55e3595b",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 2, iOS 390 1`] = `
{
  "lines": 459,
  "sha256": "6c8513882019eac90195fcc14e09d064c5a36fee6630fbbed85e6880f5be70bd",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 2, web 390 1`] = `
{
  "lines": 459,
  "sha256": "6c8513882019eac90195fcc14e09d064c5a36fee6630fbbed85e6880f5be70bd",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer with the pin sheet open, iOS 390 1`] = `
{
  "lines": 562,
  "sha256": "19c1ada593728985f3c69bfd5eac49986ed73ec6d542cdd6225dfa004500928f",
}
`;
